add mail bindings

--- a/Test Foonkie/Test Foonkie/MainPage.xaml
+++ b/Test Foonkie/Test Foonkie/MainPage.xaml
@@ -12,6 +12,7 @@
             <views:ThirdLayoutView Grid.Row="3"/>
          </Grid>
       </ScrollView>
+      <views:ExpanderMenuView HorizontalOptions="End" VerticalOptions="End"/>
    </Grid>
 
 </ContentPage>
