--- a/Test Foonkie/Test Foonkie/Views/FisrtLayoutView.xaml
+++ b/Test Foonkie/Test Foonkie/Views/FisrtLayoutView.xaml
@@ -2,6 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:views="clr-namespace:Test_Foonkie.Views"
+             xmlns:locals="clr-namespace:Test_Foonkie.ViewModel"
              x:Class="Test_Foonkie.Views.FisrtLayoutView">
   <ContentView.Content>
       <StackLayout Style="{StaticResource FirstLayout}" Padding="31, 50, 31, 0" Margin="0, 0, 0, 158">
@@ -12,7 +13,9 @@
          <BoxView Color="Black" HeightRequest=".5" WidthRequest="57" Margin="0,23,0,7" VerticalOptions="Fill" HorizontalOptions="Center"/>
          <Label Style="{StaticResource Title}" Text="Expert Samurais on Develop Secure apps with Sensitive data."/>
          <Label Style="{StaticResource SubTitle}" Margin="24, 14, 24, 22" Text="We are samurais code monkeys that masters the most recent data security protocols, encrypted methodologies and Blockchain development."/>
-         <views:CustomButtonView  VerticalOptions="Fill" HorizontalOptions="Center" Text="Get in Touch!"/>
+         <views:CustomButtonView x:Name="CusomButton"  
+                                 ButtonComand="{Binding Source={RelativeSource AncestorType={x:Type locals:MainViewModel}}, Path=GoToMailCommand}" 
+                                 VerticalOptions="Fill" HorizontalOptions="Center" Text="Get in Touch!"/>
 
          <Image Source="FoonkieWebsiteMonkey1" Margin="0, 10, 0, 0" HeightRequest="476" WidthRequest="257"/>
       </StackLayout>
